static/manifests/dbic.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dbic

#catalogdb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogdb
  namespace: dbic
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: dbic
      app.kubernetes.io/name: catalogdb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: catalogdb
        app.kubernetes.io/version: "1"
        app.kubernetes.io/component: service
        app.kubernetes.io/part-of: dbic
        app.kubernetes.io/created-by: suchcodewow
      annotations:
        owner: Database Team
        chat-channel: dev-team-services
    spec:
      containers:
        - name: catalogdb
          image: mysql
          imagePullPolicy: Always
          ports:
            - containerPort: 3306
              name: catalogdb
---
apiVersion: v1
kind: Service
metadata:
  name: catalogdb
  namespace: dbic
  labels:
    app.kubernetes.io/part-of: dbic
    app.kubernetes.io/name: catalogdb
spec:
  ports:
    - port: 3306
      targetPort: 3306
      name: catalogdb
  selector:
    app.kubernetes.io/part-of: dbic
    app.kubernetes.io/name: catalogdb
  type: ClusterIP

#ordersdb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordersdb
  namespace: dbic
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: dbic
      app.kubernetes.io/name: ordersdb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ordersdb
        app.kubernetes.io/version: "1"
        app.kubernetes.io/component: service
        app.kubernetes.io/part-of: dbic
        app.kubernetes.io/created-by: suchcodewow
      annotations:
        owner: Database Team
        chat-channel: dev-team-services
    spec:
      containers:
        - name: ordersdb
          image: "mcr.microsoft.com/mssql/server"
          imagePullPolicy: Always
          ports:
            - containerPort: 1433
              name: ordersdb
---
apiVersion: v1
kind: Service
metadata:
  name: ordersdb
  namespace: dbic
  labels:
    app.kubernetes.io/part-of: dbic
    app.kubernetes.io/name: ordersdb
spec:
  ports:
    - port: 1433
      targetPort: 1433
      name: ordersdb
  selector:
    app.kubernetes.io/part-of: dbic
    app.kubernetes.io/name: ordersdb
  type: ClusterIP

#maindb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maindb
  namespace: dbic
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: dbic
      app.kubernetes.io/name: maindb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: maindb
        app.kubernetes.io/version: "1"
        app.kubernetes.io/component: service
        app.kubernetes.io/part-of: dbic
        app.kubernetes.io/created-by: suchcodewow
      annotations:
        owner: Database Team
        chat-channel: dev-team-services
    spec:
      containers:
        - name: maindb
          image: mongo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 27017
              name: maindb
---
apiVersion: v1
kind: Service
metadata:
  name: maindb
  namespace: dbic
  labels:
    app.kubernetes.io/part-of: dbic
    app.kubernetes.io/name: maindb
spec:
  ports:
    - port: 27017
      targetPort: 27017
      name: maindb
  selector:
    app.kubernetes.io/part-of: dbic
    app.kubernetes.io/name: maindb
  type: ClusterIP

#catalogAPI
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogapi
  namespace: dbic
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: dbic
      app.kubernetes.io/name: catalogapi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: catalogapi
        app.kubernetes.io/version: "1"
        app.kubernetes.io/component: service
        app.kubernetes.io/part-of: dbic
        app.kubernetes.io/created-by: suchcodewow
      annotations:
        owner: Services Team
        chat-channel: dev-team-services
    spec:
      containers:
        - name: catalogapi
          image: suchcodewow/dbic-catalogapi:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: catalogapi
---
apiVersion: v1
kind: Service
metadata:
  name: catalogapi
  namespace: dbic
  labels:
    app.kubernetes.io/part-of: dbic
    app.kubernetes.io/name: catalogapi
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: catalogapi
  selector:
    app.kubernetes.io/part-of: dbic
    app.kubernetes.io/name: catalogapi
  type: ClusterIP

#ordersapi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordersapi
  namespace: dbic
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: dbic
      app.kubernetes.io/name: ordersapi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ordersapi
        app.kubernetes.io/version: "1"
        app.kubernetes.io/component: service
        app.kubernetes.io/part-of: dbic
        app.kubernetes.io/created-by: suchcodewow
      annotations:
        owner: Services Team
        chat-channel: dev-team-services
    spec:
      containers:
        - name: ordersapi
          image: suchcodewow/dbic-ordersapi:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: ordersapi
---
apiVersion: v1
kind: Service
metadata:
  name: ordersapi
  namespace: dbic
  labels:
    app.kubernetes.io/part-of: dbic
    app.kubernetes.io/name: ordersapi
spec:
  ports:
    - port: 8000
      targetPort: 8000
      name: ordersapi
  selector:
    app.kubernetes.io/part-of: dbic
    app.kubernetes.io/name: ordersapi
  type: ClusterIP

#quotesapi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotesapi
  namespace: dbic
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: dbic
      app.kubernetes.io/name: quotesapi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: quotesapi
        app.kubernetes.io/version: "1"
        app.kubernetes.io/component: service
        app.kubernetes.io/part-of: dbic
        app.kubernetes.io/created-by: suchcodewow
      annotations:
        owner: Services Team
        chat-channel: dev-team-services
    spec:
      containers:
        - name: quotesapi
          image: suchcodewow/dbic-quotesapi2:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 6000
              name: quotesapi
---
apiVersion: v1
kind: Service
metadata:
  name: quotesapi
  namespace: dbic
  labels:
    app.kubernetes.io/part-of: dbic
    app.kubernetes.io/name: quotesapi
spec:
  ports:
    - port: 6000
      targetPort: 6000
      name: quotesapi
  selector:
    app.kubernetes.io/part-of: dbic
    app.kubernetes.io/name: quotesapi
  type: ClusterIP

#mainapi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mainapi
  namespace: dbic
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: dbic
      app.kubernetes.io/name: mainapi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mainapi
        app.kubernetes.io/version: "1"
        app.kubernetes.io/component: service
        app.kubernetes.io/part-of: dbic
        app.kubernetes.io/created-by: suchcodewow
      annotations:
        owner: Services Team
        chat-channel: dev-team-services
    spec:
      containers:
        - name: mainapi
          image: suchcodewow/dbic-mainapi:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: mainapi
---
apiVersion: v1
kind: Service
metadata:
  name: mainapi
  namespace: dbic
  labels:
    app.kubernetes.io/part-of: dbic
    app.kubernetes.io/name: mainapi
spec:
  ports:
    - port: 5000
      targetPort: 5000
      name: mainapi
  selector:
    app.kubernetes.io/part-of: dbic
    app.kubernetes.io/name: mainapi
  type: ClusterIP

#ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: dbic
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: dbic
      app.kubernetes.io/name: ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ui
        app.kubernetes.io/version: "1"
        app.kubernetes.io/component: service
        app.kubernetes.io/part-of: dbic
        app.kubernetes.io/created-by: suchcodewow
      annotations:
        owner: Frontend Team
        chat-channel: dev-team-services
    spec:
      containers:
        - name: ui
          image: suchcodewow/dbic-ui:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: ui
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: dbic
  labels:
    app.kubernetes.io/part-of: dbic
    app.kubernetes.io/name: ui
spec:
  ports:
    - port: 80
      targetPort: 3000
      name: ui
  selector:
    app.kubernetes.io/part-of: dbic
    app.kubernetes.io/name: ui
  type: LoadBalancer

# loadgen
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgen
  namespace: dbic
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: dbic
      app.kubernetes.io/name: loadgen
  template:
    metadata:
      labels:
        app.kubernetes.io/name: loadgen
        app.kubernetes.io/version: "1"
        app.kubernetes.io/component: service
        app.kubernetes.io/part-of: dbic
        app.kubernetes.io/created-by: suchcodewow
      annotations:
        owner: QA
        chat-channel: qa-team
    spec:
      containers:
        - name: loadgen
          resources:
            requests:
              memory: "3000Mi"
              cpu: "500m"
            limits:
              memory: "3000Mi"
              cpu: "2200m"
          image: suchcodewow/dbic-loadgen:latest
          imagePullPolicy: Always
